--- a/src/app/cabecero/cabecero.component.html
+++ b/src/app/cabecero/cabecero.component.html
@@ -4,12 +4,14 @@
             Presupuesto Disponible:
         </div>
         
-        <div class="presupuesto_valor">{{presupuestoTotal}}</div>
+        <div class="presupuesto_valor">
+            {{presupuestoTotal | currency:'MNX':'$':'1.2-2'}}</div>
         
         <div class="presupuesto_ingreso limpiarEstilos">
             <div class="presupuesto_ingreso--texto">Ingresos</div>
             <div class="right">
-                <div class="presupuesto_ingreso--valor">{{ingresoTotal}}</div>
+                <div class="presupuesto_ingreso--valor">
+                    {{ingresoTotal | currency:'MNX':'$':'1.2-2'}}</div>
                 <div class="presupuesto_ingreso--porcentaje">&nbsp;</div>
             </div>
         </div>
@@ -17,9 +19,10 @@
         <div class="presupuesto_egreso limpiarEstilos">
             <div class="presupuesto_egreso--text">Egresos</div>
             <div class="right limpiarEstilos">
-                <div class="presupuesto_egreso--valor">- {{egresoTotal}}</div>
+                <div class="presupuesto_egreso--valor">
+                    - {{egresoTotal | currency:'MNX':'$':'1.2-2'}}</div>
                 <div class="presupuesto_egreso--porcentaje">
-                    {{porcentajeTotal}}%</div>
+                    {{porcentajeTotal | percent}}</div>
             </div>
         </div>
     </div>
