--- a/src/app/egreso/egreso.component.html
+++ b/src/app/egreso/egreso.component.html
@@ -6,7 +6,7 @@
         class="elemento limpiarEstilos" >
             <div class="elemento_descripcion">{{egreso.descripcion}}</div>
             <div class="right limpiarEstilos">
-                <div class="elemento_valor">- {{egreso.valor | currency:'MNX':'$':'1.2-2'}}</div>
+                <div class="elemento_valor">- {{egreso.valor | currency:'BRL':'R$':'1.2-2'}}</div>
                 <div class="elemento_porcentaje">
                     {{calcularPorcentaje(egreso) | percent}}</div>
                 <div class="elemento_eliminar">
