--- a/src/app/ingreso/ingreso.component.html
+++ b/src/app/ingreso/ingreso.component.html
@@ -6,7 +6,7 @@
         class="elemento limpiarEstilos">
             <div class="elemento_descripcion">{{ingreso.descripcion}}</div>
             <div class="right limpiarEstilos">
-                <div class="elemento_valor">{{ingreso.valor | currency:'MNX':'$':'1.2-2'}}</div>
+                <div class="elemento_valor">{{ingreso.valor | currency:'BRL':'R$':'1.2-2'}}</div>
                 <div class="elemento_eliminar">
                     <button class="elemento_eliminar--btn">
                         <i class="ion-ios-close-outline"
